# qdrant-datafusion

./: .justfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  cliff.toml  coverage.lcov  full_coverage.lcov
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
src/: arrow.rs  builder.rs  constants.rs  error.rs  expr.rs  lib.rs  prelude.rs  stream.rs  table.rs  test_utils.rs  udfs.rs  utils.rs
src/arrow/: deserialize.rs  schema.rs
src/expr/: filters.rs  utils.rs
tests/: e2e.rs
tests/common/: mod.rs
